force-app/main/default/objects/Employment_History__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employment History</relationshipLabel>
    <relationshipName>Employment_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>