force-app/main/default/objects/Employment_History__c/fields/Job_Task__c.field-meta.xml
<CustomField>
    <fullName>Job_Task__c</fullName>
    <label>Job Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>