force-app/main/default/objects/Employment_History__c/fields/Last_Salary__c.field-meta.xml
<CustomField>
    <fullName>Last_Salary__c</fullName>
    <label>Last Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>