force-app/main/default/objects/Employment_History__c/fields/Leave_Reason__c.field-meta.xml
<CustomField>
    <fullName>Leave_Reason__c</fullName>
    <label>Leave Reason</label>
    <type>TextArea</type>
</CustomField>